Update_versionnew version.html

--- a/assets/version.html
+++ b/assets/version.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p> esto es un ejercicio para freecodecamp </p>
+<p> esto es un ejercicio para freecodecamp  este parrafo se agrega para practicar como  atualizar un repositorio bifurcado</p>
 
 </body>
 </html>
